// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  className="Switch__SwitchContainer-sc-1bvlvzt-0 klHrXA"
  disabled={false}
  id={null}
  label="Switch"
  onClick={[Function]}
>
  <div
    checked={false}
    className="Switch__StyledSwitch-sc-1bvlvzt-1 bGaMGW"
    disabled={false}
    onChange={null}
  >
    <div
      checked={false}
      className="Switch__Circle-sc-1bvlvzt-2 eLZNxo"
      disabled={false}
    />
  </div>
  <label
    className="Typography__StyledLabel-sc-19auepv-0 hnkqpy"
    cursor="pointer"
    fontSize="0.875rem"
    fontWeight={400}
    htmlFor={null}
    letterSpacing="1px"
    onClick={null}
  >
    Switch
  </label>
</div>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo"
  id={null}
  rows={null}
>
  <div
    className="Switch__SwitchContainer-sc-1bvlvzt-0 klHrXA"
    disabled={false}
    id={null}
    label="Selected"
    onClick={[Function]}
  >
    <div
      checked={true}
      className="Switch__StyledSwitch-sc-1bvlvzt-1 ipYhZK"
      disabled={false}
      onChange={null}
    >
      <div
        checked={true}
        className="Switch__Circle-sc-1bvlvzt-2 dujSma"
        disabled={false}
      />
    </div>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hnkqpy"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Selected
    </label>
  </div>
  <div
    className="Switch__SwitchContainer-sc-1bvlvzt-0 klHrXA"
    disabled={false}
    id={null}
    label="Unselected"
    onClick={[Function]}
  >
    <div
      checked={false}
      className="Switch__StyledSwitch-sc-1bvlvzt-1 bGaMGW"
      disabled={false}
      onChange={null}
    >
      <div
        checked={false}
        className="Switch__Circle-sc-1bvlvzt-2 eLZNxo"
        disabled={false}
      />
    </div>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hnkqpy"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Unselected
    </label>
  </div>
  <div
    className="Switch__SwitchContainer-sc-1bvlvzt-0 kkHuBv"
    disabled={true}
    id={null}
    label="Disabled"
    onClick={[Function]}
  >
    <div
      checked={false}
      className="Switch__StyledSwitch-sc-1bvlvzt-1 fOejSn"
      disabled={true}
      onChange={null}
    >
      <div
        checked={false}
        className="Switch__Circle-sc-1bvlvzt-2 cBKXXb"
        disabled={true}
      />
    </div>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hnkqpy"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Disabled
    </label>
  </div>
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 CwASo"
  id={null}
  rows={null}
>
  <div
    className="Switch__SwitchContainer-sc-1bvlvzt-0 klHrXA"
    disabled={false}
    id={null}
    label="Left Aligned"
    onClick={[Function]}
  >
    <div
      checked={false}
      className="Switch__StyledSwitch-sc-1bvlvzt-1 bGaMGW"
      disabled={false}
      onChange={null}
    >
      <div
        checked={false}
        className="Switch__Circle-sc-1bvlvzt-2 eLZNxo"
        disabled={false}
      />
    </div>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hnkqpy"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Left Aligned
    </label>
  </div>
  <div
    className="Switch__SwitchContainer-sc-1bvlvzt-0 ileWAw"
    disabled={false}
    id={null}
    label="Right Aligned"
    onClick={[Function]}
  >
    <div
      checked={false}
      className="Switch__StyledSwitch-sc-1bvlvzt-1 bGaMGW"
      disabled={false}
      onChange={null}
    >
      <div
        checked={false}
        className="Switch__Circle-sc-1bvlvzt-2 eLZNxo"
        disabled={false}
      />
    </div>
    <label
      className="Typography__StyledLabel-sc-19auepv-0 hnkqpy"
      cursor="pointer"
      fontSize="0.875rem"
      fontWeight={400}
      htmlFor={null}
      letterSpacing="1px"
      onClick={null}
    >
      Right Aligned
    </label>
  </div>
</section>
`;
